--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "cross-fetch": "^4.0.0",
+    "dotenv": "^16.3.1",
     "elysia": "^0.7.15",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
